<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av_imu_launch</name>
  <version>1.2.0</version>
  <description>AV velodyne config and launch</description>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
  <maintainer email="hcruzgo@ed.ac.uk">Hector Cruz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>microstrain_inertial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
